--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_database: null
   firebase_storage: ^3.0.8
   flutter_inappwebview: ^5.3.2
+  flutter_lock_screen: ^2.0.1
   flutter_svg_provider: ^0.1.9
   font_awesome_flutter: ^9.0.0
   google_fonts: ^2.0.0
