--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,12 +33,17 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 30
 
+    //Remove these lines of codes
+    lintOptions {
+        disable 'InvalidPackage'
+        checkReleaseBuilds false
+    }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+      
         applicationId "com.aminem.trapo.care"
         multiDexEnabled true
         minSdkVersion 23
@@ -46,27 +51,31 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
-     buildTypes {
-        release {
-            signingConfig signingConfigs.debug
-            minifyEnabled false
-            shrinkResources false
-        }
-    }
+    //  buildTypes {
+    //     release {
+    //         signingConfig signingConfigs.debug
+    //         minifyEnabled false
+    //         shrinkResources false
+    //     }
+    // }
 
-//     signingConfigs {
-//        release {
-//            keyAlias keystoreProperties['keyAlias']
-//            keyPassword keystoreProperties['keyPassword']
-//            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-//            storePassword keystoreProperties['storePassword']
-//        }
-//    }
-//    buildTypes {
-//        release {
-//            signingConfig signingConfigs.release
-//        }
-//    }
+    signingConfigs {
+       release {
+           keyAlias keystoreProperties['keyAlias']
+           keyPassword keystoreProperties['keyPassword']
+           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storePassword keystoreProperties['storePassword']
+       }
+   }
+   buildTypes {
+       release {
+          signingConfig signingConfigs.release
+            shrinkResources true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
+                    'proguard-rules.pro'
+       }
+   }
 }
 
 flutter {
@@ -74,6 +83,7 @@ flutter {
 }
 
 dependencies {
+    implementation 'com.google.android.material:material:1.4.0-alpha02'
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-analytics'
