--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,14 +25,15 @@ dependencies:
   flutter_svg_provider: ^0.1.9
   font_awesome_flutter: ^9.0.0
   google_fonts: ^2.0.0
-  image_picker: null
+  image_picker:
   photo_view: ^0.11.1
   random_string: ^2.0.1
   shared_preferences: ^2.0.5
   shimmer: ^2.0.0
   timeago: ^3.0.2
   url_launcher: ^6.0.3
-
+  # firebase_storage: ^5.0.0
+  # cloud_firestore: ^0.14.1+3
 dev_dependencies:
   flutter_test:
     sdk: flutter
