--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,11 @@ dependencies:
   auto_size_text: ^2.1.0
   cached_network_image: ^3.0.0
   carousel_slider: ^3.0.0
-  # change_app_package_name: ^1.0.0
   cloud_firestore: ^0.13.0+1
   csc_picker: ^0.2.5
   firebase_core: ^0.4.0+9
   firebase_database: null
   firebase_storage: ^3.0.8
-  # flutter_inappwebview: ^5.3.2
-  # flutter_lock_screen: ^2.0.1
   flutter_svg_provider: ^0.1.9
   font_awesome_flutter: ^9.0.0
   google_fonts: ^2.0.0
@@ -34,6 +31,7 @@ dependencies:
   shimmer: ^2.0.0
   timeago: ^3.0.2
   url_launcher: ^6.0.6
+  url_launcher_web: ^2.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
