--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   auto_size_text: ^2.1.0
   cached_network_image: ^3.0.0
   carousel_slider: ^3.0.0
+  change_app_package_name: ^1.0.0
   cloud_firestore: ^0.13.0+1
   csc_picker: ^0.2.5
   firebase_core: ^0.4.0+9
